@@ -183,11 +183,15 @@ typedef struct {
 } response;
 
 typedef struct {
-	buffer *scheme;
+	buffer *scheme; /* scheme without colon or slashes ( "http" or "https" ) */
+
+	/* authority with optional portnumber ("site.name" or "site.name:8080" ) NOTE: without "username:password@" */
 	buffer *authority;
+
+	/* path including leading slash ("/" or "/index.html") - urldecoded, and sanitized  ( buffer_path_simplify() && buffer_urldecode_path() ) */
 	buffer *path;
-	buffer *path_raw;
-	buffer *query;
+	buffer *path_raw; /* raw path, as sent from client. no urldecoding or path simplifying */
+	buffer *query; /* querystring ( everything after "?", ie: in "/index.php?foo=1", query is "foo=1" ) */
 } request_uri;
 
 typedef struct {
