@@ -12,6 +12,7 @@ NEWS
   * Allow xattr to overwrite mime type (fixes #1929)
   * Remove link from errormsg about fastcgi apps (fixes #1942)
   * Strip trailing dot from "Host:" header
+  * Remove the optional port info from SERVER_NAME (thx Mr_Bond)
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
